--- a/newsite/index.html
+++ b/newsite/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>HH First on gh</title>
+
 </head>
 <body>
 <h1>OK done</h1>
-<h2>tmam k</h2>
+<br> <br>
+<h2>k tmam</h2>
 </body>
 </html>
