--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
+<title>Css Project</title>
 </head>
 <body>
 <h1>Our Menu</h1>
