--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
    
- <button id="nav-toggle-button" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+ <button id="nav-toggle-button" type="button" class="navbar-toggle visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
     <span class="sr-only">Toggle navigation</span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
