--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css file/styles.css">
   </head>
   <body>
-  <nav class="navbar navbar-default"><h1 >Food, LLC</h1>
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
  </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-   
+   <h1 >Food, LLC</h1>
  <button id="nav-toggle-button" type="button" class="navbar-toggle visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
     <span class="sr-only">Toggle navigation</span>
     <span class="icon-bar"></span>
