--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>bding</title>
     <!-- linking the font style:-->
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css_file/bootstrap.min.css">
+    <link rel="stylesheet" href="css_file/styles.css">
   </head>
   <body>
   <nav class="navbar navbar-default"><div></div>
