--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+   <script src="https://github.com/Hat-em/CourseraWeb/blob/Web-Coursera/script.js"></script>
+   <script src="https://github.com/Hat-em/CourseraWeb/blob/Web-Coursera/SpeakGoodBye.js"></script>
+   <script src="https://github.com/Hat-em/CourseraWeb/blob/Web-Coursera/SpeakHello.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
